# CppJsonMagic

./: .gitignore  CMakeLists.txt  LICENSE  db_classes.cpp  json_magic.cpp  main.cpp
